istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: engineering
  labels:
    istio-injection: enabled
